PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2007, PHP 5.2.1RC3
- Added CURLOPT_TCP_NODELAY constant to Curl extension. (Sara)
- Improved proc_open(). Now on Windows it can run external commands not through
  CMD.EXE. (Dmitry)
- Moved extensions to PECL:
  . ext/informix (Derick, Tony)
- Fixed bug #40129 (iconv extension doesn't compile with CodeWarrior on 
  Netware). (gk at gknw dot de, Tony)
- Fixed bug #40127 (apache2handler doesnt compile on Netware). (gk at gknw
  dot de)
- Fixed bug #40121 (PDO_DBLIB driver wont free statements). (Ilia)
- Fixed bug #40098 (php_fopen_primary_script() not thread safe). (Ilia)
- Fixed bug #40091 (spl_autoload_register with 2 instances of the same
  class). (Ilia)
- Fixed bug #40083 (milter SAPI functions always return false/null). (Tony)
- Fixed bug #40079 (php_get_current_user() not thread safe). (Ilia, wharmby
  at uk dot ibm dot com)
- Fixed bug #40078 (ORA-01405 when fetching NULL values using 
  oci_bind_array_by_name()). (Tony)
- Fixed bug #40076 (zend_alloc.c: Value of enumeration constant must be in
  range of signed integer). (Dmitry)
- Fixed bug #40073 (exif_read_data dies on certain images). (Tony, Marcus)
- Fixed bug #40036 (empty() does not work correctly with ArrayObject when using
  ARRAY_AS_PROPS). (Ilia)
- Fixed bug #40002 (Try/Catch performs poorly). (Dmitry)
- Fixed bug #39993 (tr_TR.UTF-8 locale has problems with PHP). (Ilia)
- Fixed bug #39990 (Cannot "foreach" over overloaded properties). (Dmitry)
- Fixed bug #39988 (type argument of oci_define_by_name() is ignored).
  (Chris Jones, Tony)
- Fixed bug #39979 (PGSQL_CONNECT_FORCE_NEW will causes next connect to
  establish a new connection). (Ilia)
- Fixed bug #39969 (ini setting short_open_tag has no effect when using
  --enable-maintainer-zts). (Dmitry)
- Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag,